--- a/src/Furiza.AspNetCore.ExceptionHandling/Furiza.AspNetCore.ExceptionHandling.csproj
+++ b/src/Furiza.AspNetCore.ExceptionHandling/Furiza.AspNetCore.ExceptionHandling.csproj
@@ -5,9 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Furiza.Base.Core.Exceptions" Version="1.0.1" />
-    <PackageReference Include="furiza.newtonsoft.json" Version="1.0.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.1.3" />
+    <PackageReference Include="Furiza.Base.Core.Exceptions" Version="1.0.2" />
+    <PackageReference Include="Furiza.Base.Core.Exceptions.Serialization" Version="1.0.2" />
+    <PackageReference Include="furiza.newtonsoft.json" Version="1.0.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.1.1" />
   </ItemGroup>
 
 </Project>
