--- a/src/Furiza.AspNetCore.WebApiConfiguration/Furiza.AspNetCore.WebApiConfiguration.csproj
+++ b/src/Furiza.AspNetCore.WebApiConfiguration/Furiza.AspNetCore.WebApiConfiguration.csproj
@@ -5,10 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="furiza.caching" Version="1.0.3" />
-    <PackageReference Include="furiza.extensions.configuration" Version="1.0.1" />
-    <PackageReference Include="furiza.logging" Version="1.0.1" />
-    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.5" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="5.0.1" />
+    <PackageReference Include="furiza.caching" Version="1.0.4" />
+    <PackageReference Include="furiza.extensions.configuration" Version="1.0.2" />
+    <PackageReference Include="furiza.logging" Version="1.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="2.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.0" />
@@ -18,7 +19,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Furiza.AspNetCore.Authentication.JwtBearer\Furiza.AspNetCore.Authentication.JwtBearer.csproj" />
     <ProjectReference Include="..\Furiza.AspNetCore.ExceptionHandling\Furiza.AspNetCore.ExceptionHandling.csproj" />
-    <ProjectReference Include="..\Furiza.AspNetCore.Identity.EntityFrameworkCore\Furiza.AspNetCore.Identity.EntityFrameworkCore.csproj" />
   </ItemGroup>
 
 </Project>
