--- a/src/Furiza.AspNetCore.ExceptionHandling/Furiza.AspNetCore.ExceptionHandling.csproj
+++ b/src/Furiza.AspNetCore.ExceptionHandling/Furiza.AspNetCore.ExceptionHandling.csproj
@@ -2,9 +2,23 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <Authors>Furīza</Authors>
+    <Copyright>Furīza (C) 2018</Copyright>
+    <PackageProjectUrl>https://github.com/ivanborges/furiza-aspnetcore</PackageProjectUrl>
+    <Description>This package implements logic for exception handling occurred during any api request through a specific middleware that returns http status code 400 (for business exceptions) or 500 (for internal errors).</Description>
   </PropertyGroup>
 
-  <ItemGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>bin\Debug\netcoreapp2.1\Furiza.AspNetCore.ExceptionHandling.xml</DocumentationFile>
+    <NoWarn>1701;1702;1591</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>bin\Release\netcoreapp2.1\Furiza.AspNetCore.ExceptionHandling.xml</DocumentationFile>
+    <NoWarn>1701;1702;1591</NoWarn>
+  </PropertyGroup>
+
+<ItemGroup>
     <PackageReference Include="Furiza.Base.Core.Exceptions" Version="1.0.2" />
     <PackageReference Include="Furiza.Base.Core.Exceptions.Serialization" Version="1.0.2" />
     <PackageReference Include="furiza.newtonsoft.json" Version="1.0.4" />
