--- a/src/Furiza.AspNetCore.WebApiConfiguration.SecurityProvider/Furiza.AspNetCore.WebApiConfiguration.SecurityProvider.csproj
+++ b/src/Furiza.AspNetCore.WebApiConfiguration.SecurityProvider/Furiza.AspNetCore.WebApiConfiguration.SecurityProvider.csproj
@@ -2,6 +2,20 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <Authors>Furīza</Authors>
+    <Copyright>Furīza (C) 2018</Copyright>
+    <PackageProjectUrl>https://github.com/ivanborges/furiza-aspnetcore</PackageProjectUrl>
+    <Description>This package implements base logic for web api startup configuration and basic controllers for authentication and user management.</Description>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>bin\Debug\netcoreapp2.1\Furiza.AspNetCore.WebApiConfiguration.SecurityProvider.xml</DocumentationFile>
+    <NoWarn>1701;1702;1591</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>bin\Release\netcoreapp2.1\Furiza.AspNetCore.WebApiConfiguration.SecurityProvider.xml</DocumentationFile>
+    <NoWarn>1701;1702;1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
