--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,6 +34,15 @@ steps:
   inputs:
     restoreSolution: '$(solution)'
 
+# Prepare analysis on SonarCloud
+- task: SonarSource.sonarcloud.14d9cde6-c1da-4d55-aa01-2965cd301255.SonarCloudPrepare@1
+  displayName: Prepare analysis on SonarCloud
+  inputs:
+    SonarCloud: 'apikey-sonar-aspnetcore'
+    organization: 'ivanborges-github'
+    projectKey: 'ivanborges_furiza-aspnetcore'
+    projectName: 'furiza-aspnetcore'
+
 # Build solution
 - task: VSBuild@1
   displayName: Build Solution
@@ -48,6 +57,14 @@ steps:
   inputs:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
+
+# Run Code Analysis
+- task: SonarSource.sonarcloud.ce096e50-6155-4de8-8800-4221aaeed4a1.SonarCloudAnalyze@1
+  displayName: Run Code Analysis
+
+# Publish Quality Gate Result
+- task: SonarSource.sonarcloud.38b27399-a642-40af-bb7d-9971f69712e8.SonarCloudPublish@1
+  displayName: Publish Quality Gate Result
 
 # Prepare publish files
 - task: DotNetCoreCLI@2
