--- a/src/Furiza.AspNetCore.ExceptionHandling/Furiza.AspNetCore.ExceptionHandling.csproj
+++ b/src/Furiza.AspNetCore.ExceptionHandling/Furiza.AspNetCore.ExceptionHandling.csproj
@@ -1,10 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <Authors>Furīza</Authors>
     <Copyright>Furīza (C) 2018</Copyright>
     <PackageProjectUrl>https://github.com/ivanborges/furiza-aspnetcore</PackageProjectUrl>
+    <PackageTags>furiza;aspnet core;exception handling</PackageTags>
+    <PackageIconUrl>https://www.imagemhost.com.br/images/2018/10/17/furiza_logo_transp_6.png</PackageIconUrl>
+    <RepositoryUrl>https://github.com/ivanborges/furiza-aspnetcore</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
     <Description>This package implements logic for exception handling occurred during any api request through a specific middleware that returns http status code 400 (for business exceptions) or 500 (for internal errors).</Description>
   </PropertyGroup>
 
