--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,7 @@ variables:
   #WebApiConfiguration
   #WebApiConfiguration.SecurityProvider
   Pack1Version: '1.0.3'
-  Pack1PushToNuget: True
+  Pack1PushToNuget: False
 
 steps:
 # Install NuGet Tool
