Ajustes ainda em andamento (aguardando término do pacote de Audit).

--- a/src/WebApplication1/appsettings.json
+++ b/src/WebApplication1/appsettings.json
@@ -1,6 +1,7 @@
 {
   "LogConfiguration": {
     "Tool": "Serilog",
+    "WriteToType": "Raw",
     "Serilog": {
       "Using": [ "Serilog.Sinks.Async", "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Enrichers.Environment", "Serilog.Enrichers.Process", "Serilog.Enrichers.Thread" ],
       "MinimumLevel": {
@@ -20,8 +21,8 @@
               {
                 "Name": "Console",
                 "Args": {
-                  "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"//,
-                  //"theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console"
+                  "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog",
+                  "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console"
                 }
               }
             ]
@@ -34,7 +35,7 @@
               {
                 "Name": "File",
                 "Args": {
-                  "path": "logs/WebApplication1-log-.txt",
+                  "path": "logs/WebApplication1111111-log-.txt",
                   "rollingInterval": "Day"
                 }
               }
@@ -47,11 +48,12 @@
   },
   "IdentityConfiguration": {
     "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=FurizaWebApplication1;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "DefaultEmailAddress": "ivanborges@live.com"
+    "DefaultEmailAddress": "ivanborges@live.com",
+    "EnableMigrations": true
   },
   "JwtConfiguration": {
-    "Audience": "Furiza",
-    "Issuer": "Furiza",
+    "Audience": "{E9A0EB81-E08C-4876-9414-FD33376714D8}",
+    "Issuer": "{E9A0EB81-E08C-4876-9414-FD33376714D8}",
     "Secret": "Preparem-se garotos... para ter uma morte de arrepiar!"
   },
   "CacheConfiguration": {
