--- a/src/WebApplication1Client/appsettings.json
+++ b/src/WebApplication1Client/appsettings.json
@@ -45,13 +45,9 @@
       "Enrich": [ "FromLogContext", "WithMachineName", "WithEnvironmentUserName", "WithProcessId", "WithProcessName", "WithThreadId" ]
     }
   },
-  "IdentityConfiguration": {
-    "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=FurizaWebApplication1;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "DefaultEmailAddress": "ivanborges@live.com"
-  },
   "JwtConfiguration": {
     "Audience": "{A20F6762-12F0-4A65-93FF-411346789F8B}",
-    "Issuer": "Furiza",
+    "Issuer": "{E9A0EB81-E08C-4876-9414-FD33376714D8}",
     "Secret": "Preparem-se garotos... para ter uma morte de arrepiar!"
   },
   "CacheConfiguration": {
