--- a/src/Furiza.AspNetCore.Identity.EntityFrameworkCore/Furiza.AspNetCore.Identity.EntityFrameworkCore.csproj
+++ b/src/Furiza.AspNetCore.Identity.EntityFrameworkCore/Furiza.AspNetCore.Identity.EntityFrameworkCore.csproj
@@ -38,4 +38,12 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Furiza.Audit.Abstractions\Furiza.Audit.Abstractions.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
