--- a/src/Furiza.AspNetCore.Identity.EntityFrameworkCore/Furiza.AspNetCore.Identity.EntityFrameworkCore.csproj
+++ b/src/Furiza.AspNetCore.Identity.EntityFrameworkCore/Furiza.AspNetCore.Identity.EntityFrameworkCore.csproj
@@ -28,6 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="furiza.audit.abstractions" Version="1.0.0" />
     <PackageReference Include="Furiza.Base.Core.Identity.Abstractions" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.1.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.4" />
@@ -36,10 +37,6 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.1.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Furiza.Audit.Abstractions\Furiza.Audit.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
