--- a/src/Furiza.AspNetCore.WebApiConfiguration/Furiza.AspNetCore.WebApiConfiguration.csproj
+++ b/src/Furiza.AspNetCore.WebApiConfiguration/Furiza.AspNetCore.WebApiConfiguration.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="5.0.1" />
+    <PackageReference Include="furiza.audit" Version="1.0.0" />
     <PackageReference Include="furiza.caching" Version="1.1.1" />
     <PackageReference Include="furiza.extensions.configuration" Version="1.0.9" />
     <PackageReference Include="furiza.logging" Version="1.0.9" />
@@ -37,7 +38,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Furiza.AspNetCore.Authentication.JwtBearer\Furiza.AspNetCore.Authentication.JwtBearer.csproj" />
     <ProjectReference Include="..\Furiza.AspNetCore.ExceptionHandling\Furiza.AspNetCore.ExceptionHandling.csproj" />
-    <ProjectReference Include="..\Furiza.Audit\Furiza.Audit.csproj" />
   </ItemGroup>
 
 </Project>
