--- a/src/WebApplication1Client/appsettings.json
+++ b/src/WebApplication1Client/appsettings.json
@@ -1,52 +1,25 @@
 {
   "LogConfiguration": {
     "Tool": "Serilog",
+    "WriteToType": "Console",
     "Serilog": {
-      "Using": [ "Serilog.Sinks.Async", "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Enrichers.Environment", "Serilog.Enrichers.Process", "Serilog.Enrichers.Thread" ],
       "MinimumLevel": {
-        "Default": "Debug",
         "Override": {
-          "System": "Error",
-          "Microsoft": "Error",
-          "Furiza": "Information",
-          "WebApplication1": "Information"
+          "Furiza": "Information"
         }
-      },
-      "WriteTo": [
-        {
-          "Name": "Async",
-          "Args": {
-            "configure": [
-              {
-                "Name": "Console",
-                "Args": {
-                  "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"//,
-                  //"theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console"
-                }
-              }
-            ]
-          }
-        },
-        {
-          "Name": "Async",
-          "Args": {
-            "configure": [
-              {
-                "Name": "File",
-                "Args": {
-                  "path": "logs/WebApplication1-log-.txt",
-                  "rollingInterval": "Day"
-                }
-              }
-            ]
-          }
-        }
-      ],
-      "Enrich": [ "FromLogContext", "WithMachineName", "WithEnvironmentUserName", "WithProcessId", "WithProcessName", "WithThreadId" ]
+      }
+    }
+  },
+  "AuditConfiguration": {
+    "Tool": "SqlServerAndDapper",
+    "Enable": true,
+    "EnableInitializer": true,
+    "SqlServer": {
+      "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=FurizaWebApplication1;Trusted_Connection=True;MultipleActiveResultSets=true",
+      "DatabaseName": "FurizaWebApplication1"
     }
   },
   "JwtConfiguration": {
-    "Audience": "{A20F6762-12F0-4A65-93FF-411346789F8B}",
     "Issuer": "{E9A0EB81-E08C-4876-9414-FD33376714D8}",
     "Secret": "Preparem-se garotos... para ter uma morte de arrepiar!"
   },
