--- a/src/WebApplication1/appsettings.json
+++ b/src/WebApplication1/appsettings.json
@@ -48,5 +48,8 @@
     //  "Configuration": ""
     //}
   },
+  "ScopedRoleAssignmentProviderConfiguration": {
+    "SecurityProviderApiUrl": "http://localhost/"
+  },
   "AllowedHosts": "*"
 }
