--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,8 +21,8 @@ variables:
   #ScopedRoleAssignmentProvider
   #WebApiConfiguration
   #WebApiConfiguration.SecurityProvider
-  Pack1Version: '1.0.3'
-  Pack1PushToNuget: False
+  Pack1Version: '1.1.0'
+  Pack1PushToNuget: True
 
 steps:
 # Install NuGet Tool
