--- a/src/Furiza.AspNetCore.WebApplicationConfiguration/Furiza.AspNetCore.WebApplicationConfiguration.csproj
+++ b/src/Furiza.AspNetCore.WebApplicationConfiguration/Furiza.AspNetCore.WebApplicationConfiguration.csproj
@@ -6,7 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="Furiza.Base.Core.Exceptions.Serialization" Version="1.0.5" />
     <PackageReference Include="Furiza.Extensions.Configuration" Version="1.0.9" />
+    <PackageReference Include="Furiza.Newtonsoft.Json" Version="1.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.6" />
     <PackageReference Include="refit" Version="4.6.58" />
   </ItemGroup>
