--- a/src/Furiza.AspNetCore.WebApplicationConfiguration/Furiza.AspNetCore.WebApplicationConfiguration.csproj
+++ b/src/Furiza.AspNetCore.WebApplicationConfiguration/Furiza.AspNetCore.WebApplicationConfiguration.csproj
@@ -1,7 +1,25 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <Authors>Furīza</Authors>
+    <Copyright>Furīza (C) 2018</Copyright>
+    <PackageProjectUrl>https://github.com/ivanborges/furiza-aspnetcore</PackageProjectUrl>
+    <PackageTags>furiza;aspnet core;webapplication startup configuration</PackageTags>
+    <PackageIconUrl>https://www.imagemhost.com.br/images/2018/10/17/furiza_logo_transp_6.png</PackageIconUrl>
+    <RepositoryUrl>https://github.com/ivanborges/furiza-aspnetcore</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <Description>This package implements base logic for web application browser based startup configuration, including cookie authentication, automapping, exception handling and rest client through Refit.</Description>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>bin\Debug\netcoreapp2.1\Furiza.AspNetCore.WebApplicationConfiguration.xml</DocumentationFile>
+    <NoWarn>1701;1702;1591</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>bin\Release\netcoreapp2.1\Furiza.AspNetCore.WebApplicationConfiguration.xml</DocumentationFile>
+    <NoWarn>1701;1702;1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
