--- a/src/Furiza.AspNetCore.WebApplicationConfiguration/Furiza.AspNetCore.WebApplicationConfiguration.csproj
+++ b/src/Furiza.AspNetCore.WebApplicationConfiguration/Furiza.AspNetCore.WebApplicationConfiguration.csproj
@@ -28,7 +28,7 @@
     <PackageReference Include="Furiza.Extensions.Configuration" Version="1.0.9" />
     <PackageReference Include="Furiza.Networking" Version="1.0.1" />
     <PackageReference Include="Furiza.Newtonsoft.Json" Version="1.1.1" />
-    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.1" />
     <PackageReference Include="refit" Version="4.6.58" />
   </ItemGroup>
 
