--- a/src/Furiza.AspNetCore.Identity.EntityFrameworkCore/Furiza.AspNetCore.Identity.EntityFrameworkCore.csproj
+++ b/src/Furiza.AspNetCore.Identity.EntityFrameworkCore/Furiza.AspNetCore.Identity.EntityFrameworkCore.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <RuntimeFrameworkVersion>2.2.1</RuntimeFrameworkVersion>
     <Authors>Furīza</Authors>
     <Copyright>Furīza (C) 2018</Copyright>
     <PackageProjectUrl>https://github.com/ivanborges/furiza-aspnetcore</PackageProjectUrl>
