--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,8 +23,8 @@ variables:
   #WebApiConfiguration
   #WebApiConfiguration.SecurityProvider
   #WebApplicationConfiguration
-  Pack1Version: '1.4.1'
-  Pack1PushToNuget: False
+  Pack1Version: '1.4.2'
+  Pack1PushToNuget: True
 
 steps:
 # Install NuGet Tool
