--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,7 +24,7 @@ variables:
   #WebApiConfiguration.SecurityProvider
   #WebApplicationConfiguration
   Pack1Version: '1.6.0'
-  Pack1PushToNuget: True
+  Pack1PushToNuget: False
 
 steps:
 # Install NuGet Tool
