--- a/src/Furiza.AspNetCore.ScopedRoleAssignmentProvider/Furiza.AspNetCore.ScopedRoleAssignmentProvider.csproj
+++ b/src/Furiza.AspNetCore.ScopedRoleAssignmentProvider/Furiza.AspNetCore.ScopedRoleAssignmentProvider.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -6,7 +6,7 @@
     <Copyright>Furīza (C) 2018</Copyright>
     <PackageProjectUrl>https://github.com/ivanborges/furiza-aspnetcore</PackageProjectUrl>
     <PackageTags>furiza;aspnet core;scopedroleassignmentprovider</PackageTags>
-    <PackageIconUrl>https://www.imagemhost.com.br/images/2018/10/17/furiza_logo_transp_6.png</PackageIconUrl>
+    <PackageIconUrl>https://www.imagemhost.com.br/images/2019/03/22/furiza_escrita_logo_v2.png</PackageIconUrl>
     <RepositoryUrl>https://github.com/ivanborges/furiza-aspnetcore</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <Description>This package implements a mechanism for scoped role assignment provider making use of an adapter that make http requests for a default Furiza Security Provider Web Api.</Description>
@@ -25,7 +25,7 @@
   <ItemGroup>
     <PackageReference Include="Furiza.Base.Core.Identity.Abstractions" Version="2.2.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
-    <PackageReference Include="refit" Version="4.6.90" />
+    <PackageReference Include="refit" Version="4.6.107" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.5.0" />
   </ItemGroup>
 
