Deploy Pack1Version: '1.8.2'

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,8 +21,8 @@ variables:
   #ScopedRoleAssignmentProvider
   #WebApi.Configuration
   #WebApi.Configuration.SecurityProvider
-  Pack1Version: '1.8.1'
-  Pack1PushToNuget: False
+  Pack1Version: '1.8.2'
+  Pack1PushToNuget: True
 
 steps:
 # Install NuGet Tool
